# OpenPresence

./: .env.example  .gitignore  AGENTS.md  README.md  build.gradle.kts  go.work  gradle.properties  settings.gradle.kts  tsconfig.json
agent-harness/: README.md
agent-rules/: AGENT-CORE-PRINCIPLES.md  manifest.yaml
docs/: AGENT-IMPLEMENTATION-GUIDE.md  API-CONTRACT.md  ARCHITECTURE.md  BIOMETRICS.md  BUSINESS-RULES.md  COMMIT-CONVENTIONS.md  CONTRIBUTING.md  DATA-MODEL.md  DOMAIN-EVENTS.md  DOMAIN-MODEL.md  E2E-MASTER-SUITE.md  FRAUD-DETECTION.md  GLOSSARY.md  IMPLEMENTATION-ROADMAP.md  INFRASTRUCTURE.md  MOBILE-FLOWS.md  NEW-PROJECT-CHECKLIST.md  ORGANIZATION.md  PRODUCT-OVERVIEW.md  README.md  SECURITY.md  STACK.md  TESTING.md  USE-CASE-EXAMPLE.md
infra/: docker-compose.e2e.yml  docker-compose.yml
models/: MANIFEST.json
scripts/: business-rules-coverage.json  dev-backend.sh  download-models.sh  generate-biometric-proto.sh  generate-e2e-report.py  seed-dev-users.sh  setup-local-ai.sh  verify-admin-auth.sh  verify-admin-guards.sh  verify-admin-login.sh  (+28 more)
services/biometric/: Cargo.toml  README.md  build.rs
services/biometric/proto/: biometric.proto
services/biometric/src/: config.rs  health.rs  lib.rs
services/biometric/src/grpc/: mod.rs  service.rs
services/biometric/src/pipeline/: liveness.rs  math.rs  mod.rs  recognition.rs
services/biometric/src/processor/: factory.rs  mod.rs  onnx.rs  stub.rs
services/biometric/src/processor/onnx/: face_processor.rs  mod.rs  processor_impl.rs
services/biometric/tests/: enrollment_e2e.rs  grpc_integration.rs
(+198 files in other folders)
